compiler-tests/src/test/data/diagnostic/functioninject/CannotHaveTypeArgs.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
@Inject
fun <!FUNCTION_INJECT_TYPE_PARAMETERS_ERROR!><T><!> Example() {

}
